--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
-    <string name="app_name">FoodsDelivery</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Shoe store</string>
+
     <string name="channel_name">Notification</string>
     <string name="channel_description">Description</string>
+    <string name="forget_password">Forget password</string>
+    <string name="suggest_register">Have not an account. Register.</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="register">Register</string>
+    <string name="suggest_login">Have an account. Login</string>
+    <string name="next">Next</string>
+    <string name="shopping">Continue shopping now</string>
 </resources>
