--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
     <string name="description">Description</string>
+    <string name="size">Size</string>
+    <string name="company">Company</string>
 </resources>
