--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="description">Description</string>
     <string name="size">Size</string>
     <string name="company">Company</string>
+    <string name="logout">Logout</string>
 </resources>
